<resources>
    <string name="app_name">Filmoteca</string>
    <string name="idioma">Idioma</string>
    <string name="editpeli">Editar Pelicula</string>
    <string name="borrapeli">Borrar Pelicula</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="buscagoogle">Buscar en Google</string>
    <string name="anyadirpeli">Añadir Pelicula</string>
    <string name="conectarseabbdd">Conectarse a BBDD FIREBASE</string>
    <string name="estadodeconexion">Conectandose a BBDD FIREBASE...</string>
    <string name="conectarseabbdd2">Conectarse a SERVICIO WEB JSON</string>
    <string name="estadodeconexion2">CONECTARSE A SERV WEB JSON...</string>
    <string name="botonseleccionarpelis">Abrir lista de peliculas</string>
    <string name="botonseleccionarpelis2">CONECTARSE....</string>
    <string name="conectadoabbdd">Conexion a la BBDD completada</string>
    <string name="noconectadoabbdd">Conexion a la BBDD FALLIDA!</string>

    <string name="titulo">Titulo: </string>
    <string name="genero">Género: </string>
    <string name="sinopsis">Sinopsis: </string>
    <string name="director">Director: </string>
    <string name="vista">Vista: </string>
    <string name="selecciondeidioma">Seleccion de idioma: </string>
    <string name="textoselecciondeidioma">Elija el idioma que quiera utilizar en esta aplicación</string>
    <string name="nombredelidioma">Español</string>
    <string name="nombredelidiomaen">Inglés</string>
    <string name="tituloacercade">Acerca de</string>
    <string name="mensajeacercade">Esta aplicacion ha sido creada por Borja Rodriguez Para la asignatura prog dirigida por eventos</string>
    <string name="botonguardarnuevapeli">Guardar Pelicula</string>
    <string name="guardarcambios">Guardar Cambios</string>
    <string name="Direccionalaqueconectar">"Direccion a la que conectarse: "</string>
    <string name="title_activity_detalle_pelicula">DetallePelicula</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola blank fragment</string>

    <string name="tab_info">Info</string>
    <string name="tab_videoclub">Videoclub</string>
    tab_info


</resources>