<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:transitionName="Conexion a BBDD"
    tools:context=".conectaaBBDD">


    <Button
        android:id="@+id/botonverlistapelis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="408dp"
        android:onClick="irActivityVisor"
        android:text="@string/botonseleccionarpelis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonverlistapelis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:onClick="irActivityJSON"
        android:text="@string/botonseleccionarpelis2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoconexionbbdd2"
        app:layout_constraintVertical_bias="0.884" />

    <TextView
        android:id="@+id/textoconexionbbdd"
        android:layout_width="317dp"
        android:layout_height="142dp"
        android:layout_marginTop="92dp"
        android:text="@string/estadodeconexion"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoconexionbbdd2"
        android:layout_width="317dp"
        android:layout_height="142dp"
        android:layout_marginTop="76dp"
        android:text="@string/estadodeconexion2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonverlistapelis" />
</androidx.constraintlayout.widget.ConstraintLayout>