<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".visor">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="92dp"
        android:text="@string/titulo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="54dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:text="@string/genero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:textStyle="bold"
        android:text="@string/sinopsis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textStyle="bold"
        android:layout_marginTop="200dp"
        android:text="@string/director"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/vista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/titulomostrar"
        android:layout_width="253dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="92dp"
        android:text="titulo mostrado"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/generomostrar"
        android:layout_width="254dp"
        android:layout_height="21dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="genero mostrado"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/titulomostrar" />

    <TextView
        android:id="@+id/sinopsismostrar"
        android:layout_width="255dp"
        android:layout_height="207dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="kfjhgdkfljghjdfhjklghjkdfghjkldjflhkghjlkdhjklf dfjkg hjkdflhjkg lhjkd dhjk fhjkghjk hjkdhjkjhdkf hjdhjk jd hjkdhjkfghdfkjghdfk jkj  ldjkfhjgkjldfhjgk"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/generomostrar" />

    <TextView
        android:id="@+id/directormostrar"
        android:layout_width="253dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="director mostrado"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/sinopsismostrar" />

    <TextView
        android:id="@+id/vistamostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="SI O NO"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/directormostrar" />

</androidx.constraintlayout.widget.ConstraintLayout>